<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Horfay Test</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_a_new_account_sign_up">Create a New Account? <font color="#0D0140">Sign up</font></string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an Account? <font color="#0D0140">Sign in</font></string>
    <string name="terms_and_conditions">I have read and agree to the terms and conditions.</string>
    <string name="confirm_the_information">I hereby confirm that the information provided herein is correct.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_pass_hint">To reset your password, you need your mobile number that can be authenticated</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_hint">we just send you a verify code. check your inbox.</string>
    <string name="pin_description">We use state-of-the-art security measures to protect your information at all times.</string>
    <string name="continue_text">Continue</string>
    <string name="rating_des">Jim has done a fabulous job, it took exactly the same time as mentioned and he came on time to our doorstep.</string>
    <string name="offering_card_des">Lorem ipsum dolor sit amet, consectetu piscingsds
sed do eiusmod tempor incididunt ut labore etsdd dolore magna aliqua laboris nisi ut aliquip ex eadfd
commodo consequat. Duis aute irure fggffgffrddf inreprehenderit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date_bot_text">Free cancellation till 2hrs before the bookedslot, post that ₹50 chargeable</string>
    <string name="location_direction">Sorry! Our Service is not available for this location right now Please select some other Location </string>
    <string name="address_dummy_text">Bhel Nagar, Piplani, Ayodhya Bypass, Bhopal,Madhya Pradesh 462022, India </string>
    <string name="about_us_text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="tcn_text1">Your access to and use of Lorem Ipsum (the app) is subject exclusively to these Terms and Conditions. You will not use the app for any purpose that is unlawful or prohibited by these Terms and Conditions. By using the app you are fully accepting the terms,conditions and disclaimers contained in this notice. If you do not accept these Terms and Conditions you must immediately stop using the app.</string>
    <string name="tcn_text2">The contents of Lorem Ipsum app do not constitute advice and should not be relied upon in making or refraining from making, any decision.All material contained on Lorem Ipsum is provided without any or warranty of any kind. You use the material on Lorem Ipsum at your own discretion</string>
    <string name="tcn_text3">Throughout this app you may find links to third party apps. The provision of a link to such an app does not mean that we endorse that app.If you visit any app via a link in this app you do so at your own risk.</string>
    <string name="tcn_text4">You agree to indemnify and hold Lorem Ipsum and its employees and agents harmless from and against all liabilities, legal fees, damages,losses, costs and other expenses in relation to any claims or actions brought against Lorem Ipsum arising out of any breach by you of these Terms and Conditions or other liabilities arising out of your use of this app.</string>
    <string name="tcn_text5">If any of these Terms and Conditions should be determined to be invalid,illegal or unenforceable for any reason by any court of competent jurisdiction then such Term or Condition shall be severed and the remaining Terms and Conditions shall survive and remain in full force and effect and continue to be binding and enforceable.</string>
    <string name="tcn_text6">If you breach these Conditions of Use and we take no action,we will still be entitled to use our rights and remedies in any other situation where you breach these Conditions of Use.</string>


    <string-array name="counry">
        <item>Please select a country</item>
        <item>India</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Canada</item>
        <item>Saudi Arabia</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple_orchard">Apple orchard \n development</string>
    <string name="apple_repair">Appliance repair \n&amp; service</string>
    <string name="see_all_text">See All\n</string>
    <string name="architect_text">Architect\n</string>
    <string name="salon_spa_text"><![CDATA[Salon & Spa]]></string>
    <string name="all_categories">All Categories</string>
    <string name="sub_women_sa"><![CDATA[Women Salon & Spa]]></string>
    <string name="proceed">Proceed</string>
    <string name="faqs">FAQs</string>
    <string name="excluded">Excluded</string>
    <string name="included">Included</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_text">we will need your location to \n give you a better experience.</string>
    <string name="selected_services"><u>Selected Services</u></string>
</resources>