<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ForgotPassword">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_press_icon" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <Space
        android:id="@+id/space_10dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/forgo_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#0D0140"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_hint"
        android:textAlignment="center"
        android:textColor="#524B6B"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/space_10dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/group_67"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView3"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="#0D0140"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/space_10_1dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <Space
        android:id="@+id/space_10_1dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp10"
        app:layout_constraintBottom_toTopOf="@id/reset_phone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/reset_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp55"
        android:background="@drawable/singin_back"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="@dimen/dp10"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/space_10_2dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <Space
        android:id="@+id/space_10_2dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp10"
        app:layout_constraintBottom_toTopOf="@id/button_reset_password"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/singin_back"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

</androidx.constraintlayout.widget.ConstraintLayout>